- Issue where reminder emails where sent again and again if the registration was not paid.

### Added
- New setting "KEPCHUP_DISPLAY_COURSE_NUMBER_INSTEAD_OF_ACTIVITY" to display the couse number on the activities
    selection page instead of the activity name (e.g. Basket 1 instead of Basket).

### Changed
- Reminder delay set to 48h for La Tour de Peilz


## 3.8.4 2024-08-14
### Added
- Button to register from activities if registration is open
- Intelligent phone number search in users view
- Custom labelling of id lagapeo

### Fixed
- Display of dates in invoices and registered activities lists
- Visibility toggle was broken on multiple course edit


## 3.8.3 2024-08-06
### Added
- Payment date
- Payments export


## 3.8.2 2024-07-22
### Changed
- Store db name, settings and user for every sentry call made.

## 3.8.1 2024-07-01
### Added
- AVS is mandatory


## 3.8.0 2024-06-24
### Added
- Created reminder emails, automatically sent before invoice expiry date (KEPCHUP_REGISTRATION_EXPIRE_REMINDER_MINUTES)
- Canceled registrations are now displayed in the admin interface. Cancelation reason and operator are displayed


## 3.7.4 2024-06-24
### Fixed
- waiting Registrations (i.e. not validated ones) also expire in relation to KEPCHUP_REGISTRATION_EXPIRE_MINUTES


## 3.7.3 2024-05-21
### Added
- Export more fields from django course admin

### Fixed
- User account was not displayable for sport instructors
- Could not create new users


## 3.7.2 2024-04-24
### Fixed
- Queryset for managers and instructors was not correct, causing some users to  be wrongly displayed.
- Update of users lost manager rights.


## 3.7.1 2024-03-18
### Fixed
- Overlapping issue if a course is daily and registered user has already an event on same day, which is not daily.


## 3.7.0 2024-03-13
### Added
- New Restricted Admin role


## 3.6.2 2024-02-21
### Fixed
- Absences not editable


## 3.6.1 2024-02-20
### Fixed
- Supervisor contact previously set up was displayed for everyone.
