@@ -18,6 +18,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Changed
 - Reminder delay set to 48h for La Tour de Peilz
+- If course.number starts with a letter, then we don't display Course #xxx in the activities detail page
 
 
 ## 3.8.4 2024-08-14
